[package]
name = "writeup-export"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}
toml = "0.5"
color-eyre = "0.5"
structopt = "0.3"
walkdir = "2"
temp-dir = "0.1.11"
path-dsl = "0.6.1"
regex = "1.5.4"
slug = "0.1.4"